--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -338,3 +338,21 @@ html {
 body {
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
+
+@media only screen and (max-width: 1090px) {
+  .all-testimonials {
+    display: none;
+  }
+
+  .stars-index {
+    margin-bottom: 70px;
+  }
+
+}
+
+@media only screen and (max-width: 655px) {
+
+  .search-bar {
+    display: none !important;
+  }
+}
