--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6VUAkyWP7FJyqKEvTCwsHucFaNEbJLBg" charset="utf-8"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarSurfing</title>
     <%= csrf_meta_tags %>
 
