Begin user profile photo upload functionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,3 +371,11 @@ body {
     }
   }
 }
+
+@media only screen and (max-width: 405px) {
+
+  .star {
+    height: 50% !important;
+    width: 50% !important;
+  }
+}
