--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -389,9 +389,9 @@
   }
 
   .star-photo-name {
-    max-height: 110px !important;
+    max-height: 80px !important;
     word-wrap: break-word;
     white-space: nowrap;
-    font-size: 53%;
+    font-size: 133% !important;
   }
 }
