--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -382,6 +382,15 @@ body {
     line-height: 0.8 !important;
   }
 
+  a {
+    padding: 5px !important;
+    height: 40% !important;
+    width: 40% !important;
+    min-width: 60px !important;
+    min-height: 40px !important;
+    line-height: 0.8 !important;
+  }
+
   header {
     height: 50% !important;
     min-height: 30px !important;
