--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -400,6 +400,8 @@ body {
   .footer {
     height: 50% !important;
     min-height: 30px !important;
+    min-width: 30px !important;
+    max-width: 400px !important;
     max-height: 40px !important;
   }
 
