--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -206,39 +206,40 @@ html {
   border-top: 1px solid rgba(0, 0, 0, 0.15);
   min-height: 50px;
   max-height: 75px;
+
+  a {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .github {
   height: 34px;
   width: 34px;
-  padding: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
   background-image: image-url('Github.png');
   background-size: 34px 34px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  padding-right: 125px;
   transition: box-shadow 0.3s ease;
   &:hover {
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    border: 1px solid darkgray;
   }
 }
 
 .linkedin {
   height: 34px;
   width: 34px;
-  padding: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
   background-image: image-url('Linkedin.png');
   background-size: 34px 34px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  padding-left: 125px;
   transition: box-shadow 0.3s ease;
   &:hover {
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    border: 1px solid darkgray;
   }
 }
 
@@ -341,14 +342,14 @@ html {
 }
 
 .search-results {
-  transition: 0.3s ease;
+  transition: 0.8s ease;
   position: absolute;
   z-index: 7;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 260px;
+  width: 230px;
   -webkit-box-shadow: 3px 3px 22px -2px rgba(0,0,0,0.75);
   -moz-box-shadow: 3px 3px 22px -2px rgba(0,0,0,0.75);
   box-shadow: 3px 3px 22px -2px rgba(0,0,0,0.75);
