Prevent leaving reviews on users you have no requests with

--- a/app/assets/stylesheets/api/requests.scss
+++ b/app/assets/stylesheets/api/requests.scss
@@ -245,6 +245,10 @@
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+.no-requests {
+  padding: 10px 0px;
+}
+
 .request-form {
   position: absolute;
   z-index: 6;
