--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,8 +61,8 @@ header {
 
 html {
   position: relative;
-  min-height: 100%;
-  max-height: 100%;
+  min-width: 100%;
+  max-width: 100%;
   overflow-x:hidden
 }
 
