--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -256,6 +256,27 @@
       width: 130px;
       object-fit: cover;
       border-radius: 700px;
+      transition: all 0.3s;
+
+      -moz-transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+
+      image-rendering: -moz-crisp-edges;         /* Firefox */
+      image-rendering:   -o-crisp-edges;         /* Opera */
+      image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+      image-rendering: crisp-edges;
+      -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+
+      &:hover {
+        -moz-transform: scale(1.15);
+        -webkit-transform: scale(1.15);
+        transform: scale(1.15);
+        image-rendering: -moz-crisp-edges;         /* Firefox */
+        image-rendering:   -o-crisp-edges;         /* Opera */
+        image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+        image-rendering: crisp-edges;
+        -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+      }
     }
   }
 
@@ -273,12 +294,18 @@
     font-size: 90%;
     font-weight: bold;
     width: 120%;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .user-index-item-username {
     margin-top: -5px;
     font-size: 70%;
     font-style: italic;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
