--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -101,12 +101,53 @@
 }
 
 .user-star-link {
-  color: #0072A0;
   margin-left: 5px;
   transition: all 0.5s;
 
   &:hover {
+    color: #0072A0;
     text-decoration: underline;
+  }
+}
+
+.reviewer-name-link {
+  transition: all 0.5s;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.reviewer-location-link {
+  transition: all 0.2s;
+
+  &:hover {
+    color: #0072A0;
+    text-decoration: underline;
+  }
+}
+
+.reviewer-photo-link {
+  transition: all 0.5s;
+
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+
+  image-rendering: -moz-crisp-edges;         /* Firefox */
+  image-rendering:   -o-crisp-edges;         /* Opera */
+  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+
+  &:hover {
+    -moz-transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+    transform: scale(1.15);
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
   }
 }
 
