--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,8 +45,15 @@ header {
   overflow: hidden;
   display: flex;
   align-items: center;
-  border-radius: 700px;
+  border-radius: 50%;
   justify-content: center;
+  transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+
+  &:hover {
+    border: 2px solid #0072A0;
+  }
 
   img {
     background-position: center;
@@ -56,6 +63,15 @@ header {
     object-fit: cover;
     border-radius: 700px;
     cursor: pointer;
+    transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
   }
 }
 
