--- a/app/assets/stylesheets/api/requests.scss
+++ b/app/assets/stylesheets/api/requests.scss
@@ -88,6 +88,13 @@
       .request-surfer-location {
         font-style: italic;
         font-size: 90%;
+        transition: all 0.2s;
+        color: #287fb8;
+
+        &:hover {
+          color: #ed6504;
+          text-decoration: underline;
+        }
       }
     }
 
@@ -133,6 +140,7 @@
   width: 96%;
   background-color: white;
   max-width: 1100px;
+  border-bottom: 2px solid rgba(0,0,0,0.15);
 }
 
 .user-requests-top {
@@ -179,7 +187,7 @@
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   border: 1px solid #287fb8;
   background-color: #287fb8;
-  min-width: 120px;
+  min-width: 124px;
   color: white;
   transition: background-color 0.3s ease, border-color 0.3s ease;
   &:hover {
