--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -166,6 +166,7 @@
   width: 96%;
   max-width: 1100px;
   background-color: white;
+  border-bottom: 2px solid rgba(0,0,0,0.15);
 }
 
 .user-reviews-top {
