--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -4,7 +4,7 @@
 
 .stars-index {
   background-color: #F1EFEA;
-  min-height: 780px;
+  min-height: 900px;
   h2 {
     text-align: center;
     font-size: 250%;
@@ -12,6 +12,7 @@
     text-decoration: none;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     padding: 25px;
+    padding-top: 70px;
   }
 }
 
@@ -125,6 +126,7 @@
     background-size: cover;
     background-attachment: fixed;
     background-position-y: -420px;
+    margin-top: 60px;
 
     image-rendering: -moz-crisp-edges;         /* Firefox */
     image-rendering:   -o-crisp-edges;         /* Opera */
@@ -141,8 +143,8 @@
   width: 100%;
   height: auto;
   max-height: 1050px;
-  margin-top: 10px;
   box-sizing: border-box;
+  margin-top: 70px;
 
   .star-info {
     text-align: center;
@@ -159,6 +161,7 @@
     max-width: 1100px;
     background-color: white;
     margin-bottom: 140px;
+    border-bottom: 2px solid rgba(0,0,0,0.15);
   }
 
   .star-info-title {
@@ -191,6 +194,7 @@
     background-color: white;
     margin-right: 30px;
     margin-bottom: 90px;
+    border-bottom: 2px solid rgba(0,0,0,0.15);
   }
 
   .star-host {
