--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -28,6 +28,7 @@
   min-height: 780px;
   height: 100%;
   margin-bottom: 75px;
+  margin-top: 60px;
   min-width: 780px;
 }
 
@@ -69,7 +70,7 @@
   background-color: white;
   margin-right: 10px;
   margin-top: 10px;
-  // box-sizing: border-box;
+  border-bottom: 2px solid rgba(0,0,0,0.15);
 
   .user-name {
     text-align: center;
@@ -103,15 +104,16 @@
 .user-star-link {
   margin-left: 5px;
   transition: all 0.5s;
+  color: #287fb8;
 
   &:hover {
-    color: #0072A0;
+    color: #ed6504;
     text-decoration: underline;
   }
 }
 
 .reviewer-name-link {
-  transition: all 0.5s;
+  transition: all 0.2s;
 
   &:hover {
     text-decoration: underline;
@@ -120,9 +122,10 @@
 
 .reviewer-location-link {
   transition: all 0.2s;
+  color: #287fb8;
 
   &:hover {
-    color: #0072A0;
+    color: #ed6504;
     text-decoration: underline;
   }
 }
@@ -168,6 +171,7 @@
     max-width: 1100px;
     background-color: white;
     margin-bottom: 20px;
+    border-bottom: 2px solid rgba(0,0,0,0.15);
   }
 
   .user-hosting {
@@ -194,6 +198,7 @@
     background-color: white;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 100%;
+    border-bottom: 2px solid rgba(0,0,0,0.15);
 
     .user-about {
       display: flex;
