--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -51,10 +51,10 @@
     object-fit: cover;
     border-radius: 50%;
 
-    transition: all 0.5s;
+    transition: transform 0.5s;
 
-    -moz-transition: all 0.3s;
-    -webkit-transition: all 0.3s;
+    -moz-transition: transform 0.3s;
+    -webkit-transition: transform 0.3s;
 
     image-rendering: -moz-crisp-edges;         /* Firefox */
     image-rendering:   -o-crisp-edges;         /* Opera */
@@ -119,7 +119,7 @@
 
 .user-star-link {
   margin-left: 5px;
-  transition: all 0.5s;
+  transition: color 0.5s;
   color: #287fb8;
 
   &:hover {
@@ -129,7 +129,7 @@
 }
 
 .reviewer-name-link {
-  transition: all 0.2s;
+  transition: color 0.2s;
 
   &:hover {
     text-decoration: underline;
@@ -137,7 +137,7 @@
 }
 
 .reviewer-location-link {
-  transition: all 0.2s;
+  transition: color 0.2s;
   color: #287fb8;
 
   &:hover {
@@ -344,6 +344,19 @@
   .user-show-img {
     width: 200px !important;
     height: 200px !important;
+    margin-left: -60px !important;
+  }
+
+  .user-name {
+    margin-top: 160px !important;
+  }
+
+  .user-username {
+    margin-top: 160px !important;
+  }
+
+  .user-location {
+    margin-top: 160px !important;
   }
 
   .user-show-container {
