--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -338,16 +338,20 @@ html {
   border-radius: 5%;
 }
 
+.header-photo-links {
+  position: relative;
+}
+
 .dropdown {
   background-color: white;
-  border: 1px solid rgba(0,0,0,0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   position: absolute;
-  top: 56px;
+  top: 42px;
   width: 180px;
+  right: 0px;
   z-index: 5;
   border-radius: 5px;
-  box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
-  right: 10px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   max-height: 300px;
   transition: max-height 300ms ease;
