--- a/app/assets/stylesheets/api/requests.scss
+++ b/app/assets/stylesheets/api/requests.scss
@@ -140,6 +140,9 @@
   width: 96%;
   background-color: white;
   max-width: 1100px;
+  max-height: 500px;
+  overflow: scroll;
+  overflow-y: scroll;
   border-bottom: 2px solid rgba(0,0,0,0.15);
 }
 
@@ -157,7 +160,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
-  margin-top: 10px;
+  margin-top: 30px;
 
   .user-requests-each {
     display: flex;
